@@ -1,3 +1,8 @@
+2008-01-07  muppet  <scott@asofyet.org>
+
+	* GSignal.xs, t/signal_emission_hooks.t:  Bind and test
+	g_signal_get_invocation_hint().
+
 2007-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* gperl_marshal.h: Mention in the POD that
